# anada

./: .gitignore  MANIFEST.in  README.md  commands.md  deploy.md  install.sh  main.py  pyproject.toml  quickstart.md  requirements.txt  setup.py
.github/workflows/: publish.yml
anada/: __init__.py  cli.py  config.py  note_manager.py  renderer.py  repl.py
