[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anada"
version = "0.1.0"
description = "Terminal-based Obsidian-like note-taking tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sohan Venkatesh", email = "soh.venkatesh@gmail.com"},
]
keywords = ["notes", "markdown", "terminal", "pkm", "knowledge-management", "obsidian"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
]

[project.urls]
Homepage = "https://github.com/sohv/anada"
Documentation = "https://github.com/sohv/anada#readme"
Repository = "https://github.com/sohv/anada"
Issues = "https://github.com/sohv/anada/issues"

[project.scripts]
anada = "anada.cli:cli"

[tool.setuptools]
packages = ["anada"]

